; ModuleID = '/home/carl/AnghaBench/lab/engine/code/qcommon/extr_q_math.c_PerpendicularVector.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/qcommon/extr_q_math.c_PerpendicularVector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PerpendicularVector(float* %0, float* %1) #0 {
  %3 = alloca float*, align 8
  %4 = alloca float*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca float, align 4
  %8 = alloca float*, align 8
  store float* %0, float** %3, align 8
  store float* %1, float** %4, align 8
  store float 1.000000e+00, float* %7, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %30, %2
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %10, 3
  br i1 %11, label %12, label %33

12:                                               ; preds = %9
  %13 = load float*, float** %4, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds float, float* %13, i64 %15
  %17 = load float, float* %16, align 4
  %18 = call float @fabs(float %17)
  %19 = load float, float* %7, align 4
  %20 = fcmp olt float %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %12
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %5, align 4
  %23 = load float*, float** %4, align 8
  %24 = load i32, i32* %6, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds float, float* %23, i64 %25
  %27 = load float, float* %26, align 4
  %28 = call float @fabs(float %27)
  store float %28, float* %7, align 4
  br label %29

29:                                               ; preds = %21, %12
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %6, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %6, align 4
  br label %9

33:                                               ; preds = %9
  %34 = load float*, float** %8, align 8
  %35 = getelementptr inbounds float, float* %34, i64 2
  store float 0.000000e+00, float* %35, align 4
  %36 = load float*, float** %8, align 8
  %37 = getelementptr inbounds float, float* %36, i64 1
  store float 0.000000e+00, float* %37, align 4
  %38 = load float*, float** %8, align 8
  %39 = getelementptr inbounds float, float* %38, i64 0
  store float 0.000000e+00, float* %39, align 4
  %40 = load float*, float** %8, align 8
  %41 = load i32, i32* %5, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds float, float* %40, i64 %42
  store float 1.000000e+00, float* %43, align 4
  %44 = load float*, float** %3, align 8
  %45 = load float*, float** %8, align 8
  %46 = load float*, float** %4, align 8
  %47 = call i32 @ProjectPointOnPlane(float* %44, float* %45, float* %46)
  %48 = load float*, float** %3, align 8
  %49 = call i32 @VectorNormalize(float* %48)
  ret void
}

declare dso_local float @fabs(float) #1

declare dso_local i32 @ProjectPointOnPlane(float*, float*, float*) #1

declare dso_local i32 @VectorNormalize(float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
